--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "getphim",
   "version": "1.0",
+  "main": "app.js",
   "dependencies": {
     "cors": "^2.8.4",
     "crawler": "^1.1.4",
@@ -9,5 +10,8 @@
     "express": "^4.16.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
