--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "follow-redirects": "^1.5.1",
   },
   "scripts": {
     "start": "node app.js"
