--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.16.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
-    "follow-redirects": "^1.5.1",
+    "follow-redirects": "^1.5.1"
   },
   "scripts": {
     "start": "node app.js"
