--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.4",
     "crawler": "^1.1.4",
     "crypto-js": "^3.1.9-1",
+    "cheerio": "^1.0.0-rc.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "request": "^2.87.0",
