--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.16.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
-    "follow-redirects": "^1.5.1"
+    "follow-redirects": "^1.5.1",
+    "mongoose": "^5.2.5",
   },
   "scripts": {
     "start": "node app.js"
