--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "follow-redirects": "^1.5.1",
-    "mongoose": "^5.2.5",
+    "mongoose": "^5.2.5"
   },
   "scripts": {
     "start": "node app.js"
