--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "follow-redirects": "^1.5.1",
+    "ipware": "^1.0.0",
     "mongoose": "^5.2.5",
     "string-similarity": "^1.2.0",
     "body-parser": "^1.18.3",
