--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "request-promise": "^4.2.2",
     "follow-redirects": "^1.5.1",
     "ipware": "^1.0.0",
+    "iplocation": "^5.0.1",
     "mongoose": "^5.2.5",
     "string-similarity": "^1.2.0",
     "body-parser": "^1.18.3",
